--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac6fa8d",
+   "id": "d8d16668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,25 +24,37 @@
     "# ========================\n",
     "# Phase 1: Enrich monthly file with GHA data\n",
     "# ========================\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Column constants\n",
+    "EMP_ID_COL = \"Employee ID\"\n",
+    "EMP_NAME_COL = \"Employee Name\"\n",
+    "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
+    "MGR_ID_COL = \"Entity Manager Employee ID\"        # we will create this\n",
+    "MGR_GCB_COL = \"Entity Manager GCB\"               # we will create this\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "\n",
     "def phase1_enrich(monthly_file, gha_file, output_file=\"phase1_enriched.xlsx\"):\n",
-    "    # Load files\n",
+    "    # Load monthly CSV\n",
     "    df_monthly = pd.read_csv(monthly_file, encoding=\"ISO-8859-1\")\n",
-    "    df_gha = pd.read_csv(gha_file, encoding=\"ISO-8859-1\")\n",
     "    \n",
+    "    # Load GHA Excel\n",
+    "    df_gha = pd.read_excel(gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "\n",
     "    # --- Step 1: Merge employee details (Employee ID → add GCB etc.)\n",
     "    df = df_monthly.merge(\n",
     "        df_gha[[EMP_ID_COL, GCB_COL, \"Department\", \"Legal Entity Name\"]],\n",
     "        on=EMP_ID_COL, how=\"left\"\n",
     "    )\n",
-    "    \n",
-    "    # --- Step 2: Add Manager Employee ID by matching Manager Name\n",
+    "\n",
+    "    # --- Step 2: Add Manager Employee ID by matching Manager Name from GHA\n",
     "    df = df.merge(\n",
     "        df_gha[[EMP_ID_COL, EMP_NAME_COL]].rename(\n",
     "            columns={EMP_ID_COL: MGR_ID_COL, EMP_NAME_COL: MGR_NAME_COL + \"_GHA\"}\n",
     "        ),\n",
     "        left_on=MGR_NAME_COL, right_on=MGR_NAME_COL + \"_GHA\", how=\"left\"\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # --- Step 3: Add Manager GCB\n",
     "    df = df.merge(\n",
     "        df_gha[[EMP_ID_COL, GCB_COL]].rename(\n",
@@ -50,10 +62,11 @@
     "        ),\n",
     "        on=MGR_ID_COL, how=\"left\"\n",
     "    )\n",
-    "    \n",
+    "\n",
     "    # Save Phase 1 output\n",
     "    df.to_excel(output_file, index=False)\n",
     "    print(f\"✅ Phase 1 complete → saved to {output_file}\")\n",
+    "    return df\n",
     "\n",
     "# ========================\n",
     "# Phase 2: Flatten Hierarchy\n",
