--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,133 +3,198 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8d16668",
+   "id": "e570a049",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# ========================\n",
+    "# -------------------------\n",
     "# Constants\n",
-    "# ========================\n",
+    "# -------------------------\n",
     "EMP_ID_COL = \"Employee ID\"\n",
     "EMP_NAME_COL = \"Employee Name\"\n",
+    "EMP_EMAIL_COL = \"Employee Business Email Address\"\n",
+    "MGR_ID_COL = \"Entity Manager Employee ID\"   # must exist in monthly.csv\n",
     "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
-    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
-    "GCB_COL = \"Global Career Band\"\n",
-    "MGR_GCB_COL = \"Manager Global Career Band\"   # <-- new column\n",
-    "MONTHLY_FILE = \"monthly.csv\"\n",
-    "GHA_FILE = \"gha.csv\"\n",
-    "\n",
-    "# ========================\n",
-    "# Phase 1: Enrich monthly file with GHA data\n",
-    "# ========================\n",
-    "import pandas as pd\n",
-    "\n",
-    "# Column constants\n",
-    "EMP_ID_COL = \"Employee ID\"\n",
-    "EMP_NAME_COL = \"Employee Name\"\n",
-    "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
-    "MGR_ID_COL = \"Entity Manager Employee ID\"        # we will create this\n",
-    "MGR_GCB_COL = \"Entity Manager GCB\"               # we will create this\n",
     "GCB_COL = \"Global Career Band\"\n",
     "\n",
-    "def phase1_enrich(monthly_file, gha_file, output_file=\"phase1_enriched.xlsx\"):\n",
-    "    # Load monthly CSV\n",
-    "    df_monthly = pd.read_csv(monthly_file, encoding=\"ISO-8859-1\")\n",
-    "    \n",
-    "    # Load GHA Excel\n",
-    "    df_gha = pd.read_excel(gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "# -------------------------\n",
+    "# Phase 1: Enrichment\n",
+    "# -------------------------\n",
+    "def enrich_monthly_with_gha(monthly_file, gha_file, output_file=\"phase1_enriched.xlsx\"):\n",
+    "    \"\"\"Enrich monthly CSV with GHA details.\"\"\"\n",
     "\n",
-    "    # --- Step 1: Merge employee details (Employee ID → add GCB etc.)\n",
-    "    df = df_monthly.merge(\n",
-    "        df_gha[[EMP_ID_COL, GCB_COL, \"Department\", \"Legal Entity Name\"]],\n",
-    "        on=EMP_ID_COL, how=\"left\"\n",
+    "    # Read monthly file (CSV may have special encoding)\n",
+    "    monthly = pd.read_csv(monthly_file, encoding=\"ISO-8859-1\")\n",
+    "    gha = pd.read_excel(gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "\n",
+    "    # Strip column names\n",
+    "    monthly.columns = monthly.columns.str.strip()\n",
+    "    gha.columns = gha.columns.str.strip()\n",
+    "\n",
+    "    # Select needed columns from GHA (add more here if needed)\n",
+    "    gha_subset = gha[\n",
+    "        [\n",
+    "            EMP_ID_COL,\n",
+    "            EMP_NAME_COL,\n",
+    "            EMP_EMAIL_COL,\n",
+    "            GCB_COL,\n",
+    "            \"Company\",\n",
+    "            \"Department\",\n",
+    "            \"Job Function\",\n",
+    "            \"Legal Entity Name\",\n",
+    "            \"Employee Status\"\n",
+    "        ]\n",
+    "    ].drop_duplicates()\n",
+    "\n",
+    "    # Merge monthly + gha\n",
+    "    merged = monthly.merge(\n",
+    "        gha_subset,\n",
+    "        on=EMP_ID_COL,\n",
+    "        how=\"left\",\n",
+    "        suffixes=(\"\", \"_GHA\")\n",
     "    )\n",
     "\n",
-    "    # --- Step 2: Add Manager Employee ID by matching Manager Name from GHA\n",
-    "    df = df.merge(\n",
-    "        df_gha[[EMP_ID_COL, EMP_NAME_COL]].rename(\n",
-    "            columns={EMP_ID_COL: MGR_ID_COL, EMP_NAME_COL: MGR_NAME_COL + \"_GHA\"}\n",
-    "        ),\n",
-    "        left_on=MGR_NAME_COL, right_on=MGR_NAME_COL + \"_GHA\", how=\"left\"\n",
+    "    # Add Manager GCB by merging again on Manager ID\n",
+    "    mgr_gcb = gha_subset[[EMP_ID_COL, GCB_COL]].rename(\n",
+    "        columns={EMP_ID_COL: MGR_ID_COL, GCB_COL: \"Manager GCB\"}\n",
     "    )\n",
+    "    merged = merged.merge(mgr_gcb, on=MGR_ID_COL, how=\"left\")\n",
     "\n",
-    "    # --- Step 3: Add Manager GCB\n",
-    "    df = df.merge(\n",
-    "        df_gha[[EMP_ID_COL, GCB_COL]].rename(\n",
-    "            columns={EMP_ID_COL: MGR_ID_COL, GCB_COL: MGR_GCB_COL}\n",
-    "        ),\n",
-    "        on=MGR_ID_COL, how=\"left\"\n",
-    "    )\n",
+    "    # Capture missing GHA matches\n",
+    "    missing = merged[merged[GCB_COL].isna()]\n",
     "\n",
-    "    # Save Phase 1 output\n",
-    "    df.to_excel(output_file, index=False)\n",
-    "    print(f\"✅ Phase 1 complete → saved to {output_file}\")\n",
-    "    return df\n",
-    "\n",
-    "# ========================\n",
-    "# Phase 2: Flatten Hierarchy\n",
-    "# ========================\n",
-    "def phase2_flatten(input_file=\"phase1_enriched.xlsx\", output_file=\"final_hierarchy.xlsx\"):\n",
-    "    df = pd.read_excel(input_file)\n",
-    "    \n",
-    "    hierarchy_rows = []\n",
-    "    missing_mgrs = []\n",
-    "    \n",
-    "    # Find top manager (MD)\n",
-    "    top_manager = df[df[GCB_COL] == \"MD\"][EMP_NAME_COL].unique()\n",
-    "    \n",
-    "    for _, emp in df.iterrows():\n",
-    "        # Skip top manager (MD himself)\n",
-    "        if emp[GCB_COL] == \"MD\":\n",
-    "            continue\n",
-    "        \n",
-    "        # If manager missing → push to missing manager sheet\n",
-    "        if pd.isna(emp[MGR_ID_COL]) or emp[MGR_ID_COL] not in df[EMP_ID_COL].values:\n",
-    "            missing_mgrs.append(emp.to_dict())\n",
-    "            continue\n",
-    "        \n",
-    "        # Build hierarchy row\n",
-    "        row = {\n",
-    "            \"MD Name\": top_manager[0] if len(top_manager) > 0 else None,\n",
-    "            \"GCB3/Manager Name\": emp[MGR_NAME_COL],\n",
-    "            \"Manager GCB\": emp[MGR_GCB_COL],\n",
-    "            \"Employee ID\": emp[EMP_ID_COL],\n",
-    "            \"Employee Name\": emp[EMP_NAME_COL],\n",
-    "            \"Employee GCB\": emp[GCB_COL],\n",
-    "            \"Department\": emp.get(\"Department\"),\n",
-    "            \"Legal Entity\": emp.get(\"Legal Entity Name\"),\n",
-    "        }\n",
-    "        hierarchy_rows.append(row)\n",
-    "    \n",
-    "    # Convert to DataFrames\n",
-    "    df_hierarchy = pd.DataFrame(hierarchy_rows)\n",
-    "    df_missing = pd.DataFrame(missing_mgrs)\n",
-    "    \n",
-    "    # Sorting\n",
-    "    if not df_hierarchy.empty:\n",
-    "        df_hierarchy = df_hierarchy.sort_values(\n",
-    "            by=[\"MD Name\", \"GCB3/Manager Name\", \"Employee Name\"]\n",
-    "        )\n",
-    "    \n",
-    "    # Save to Excel\n",
+    "    # Save Phase 1\n",
     "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
-    "        df_hierarchy.to_excel(writer, sheet_name=\"Hierarchy\", index=False)\n",
-    "        df_missing.to_excel(writer, sheet_name=\"Missing Managers\", index=False)\n",
-    "    \n",
-    "    print(f\"✅ Phase 2 complete → saved to {output_file}\")\n",
+    "        merged.to_excel(writer, index=False, sheet_name=\"Enriched\")\n",
+    "        if not missing.empty:\n",
+    "            missing.to_excel(writer, index=False, sheet_name=\"Missing in GHA\")\n",
+    "\n",
+    "    print(f\"✅ Phase 1 completed → {output_file}\")\n",
+    "    return merged\n",
     "\n",
     "\n",
-    "# ========================\n",
-    "# Run Both Phases\n",
-    "# ========================\n",
+    "# -------------------------\n",
+    "# Phase 2: Build Hierarchy\n",
+    "# -------------------------\n",
+    "def build_hierarchy(enriched_df, output_file=\"phase2_hierarchy.xlsx\"):\n",
+    "    \"\"\"Build flattened hierarchy with MD → GCB3 → Managers → Employees.\"\"\"\n",
+    "\n",
+    "    df_lookup = enriched_df.set_index(EMP_ID_COL)\n",
+    "\n",
+    "    final_rows = []\n",
+    "    exceptions = []\n",
+    "\n",
+    "    def get_emp(emp_id):\n",
+    "        try:\n",
+    "            return df_lookup.loc[emp_id]\n",
+    "        except KeyError:\n",
+    "            return None\n",
+    "\n",
+    "    # Find all MDs\n",
+    "    mds = enriched_df[enriched_df[GCB_COL] == \"MD\"]\n",
+    "\n",
+    "    # Process each MD\n",
+    "    for _, md in mds.iterrows():\n",
+    "        md_id = md[EMP_ID_COL]\n",
+    "\n",
+    "        # Find GCB3s under MD\n",
+    "        gcb3s = enriched_df[(enriched_df[MGR_ID_COL] == md_id) & (enriched_df[GCB_COL] == 3)]\n",
+    "\n",
+    "        if gcb3s.empty:\n",
+    "            # Employees directly under MD\n",
+    "            direct_emps = enriched_df[(enriched_df[MGR_ID_COL] == md_id) & (enriched_df[GCB_COL] != 3)]\n",
+    "            for _, emp in direct_emps.iterrows():\n",
+    "                final_rows.append({\n",
+    "                    \"MD Name\": md[EMP_NAME_COL],\n",
+    "                    \"MD ID\": md[EMP_ID_COL],\n",
+    "                    \"GCB3 Name\": \"\",\n",
+    "                    \"Reporting Manager Name\": emp[MGR_NAME_COL],\n",
+    "                    \"Reporting Manager GCB\": emp.get(\"Manager GCB\", \"\"),\n",
+    "                    **emp.to_dict()\n",
+    "                })\n",
+    "            continue\n",
+    "\n",
+    "        # Process each GCB3\n",
+    "        for _, gcb3 in gcb3s.iterrows():\n",
+    "            gcb3_id = gcb3[EMP_ID_COL]\n",
+    "\n",
+    "            # Add GCB3’s own row\n",
+    "            final_rows.append({\n",
+    "                \"MD Name\": md[EMP_NAME_COL],\n",
+    "                \"MD ID\": md[EMP_ID_COL],\n",
+    "                \"GCB3 Name\": gcb3[EMP_NAME_COL],\n",
+    "                \"Reporting Manager Name\": gcb3[MGR_NAME_COL],\n",
+    "                \"Reporting Manager GCB\": gcb3.get(\"Manager GCB\", \"\"),\n",
+    "                **gcb3.to_dict()\n",
+    "            })\n",
+    "\n",
+    "            # Managers (GCB3/4) under this GCB3\n",
+    "            rm_level = enriched_df[enriched_df[MGR_ID_COL] == gcb3_id]\n",
+    "            for _, rm in rm_level.iterrows():\n",
+    "                rm_id = rm[EMP_ID_COL]\n",
+    "\n",
+    "                final_rows.append({\n",
+    "                    \"MD Name\": md[EMP_NAME_COL],\n",
+    "                    \"MD ID\": md[EMP_ID_COL],\n",
+    "                    \"GCB3 Name\": gcb3[EMP_NAME_COL],\n",
+    "                    \"Reporting Manager Name\": rm[EMP_NAME_COL],\n",
+    "                    \"Reporting Manager GCB\": rm.get(GCB_COL, \"\"),\n",
+    "                    **rm.to_dict()\n",
+    "                })\n",
+    "\n",
+    "                # Employees under this RM\n",
+    "                emps = enriched_df[enriched_df[MGR_ID_COL] == rm_id]\n",
+    "                for _, emp in emps.iterrows():\n",
+    "                    final_rows.append({\n",
+    "                        \"MD Name\": md[EMP_NAME_COL],\n",
+    "                        \"MD ID\": md[EMP_ID_COL],\n",
+    "                        \"GCB3 Name\": gcb3[EMP_NAME_COL],\n",
+    "                        \"Reporting Manager Name\": rm[EMP_NAME_COL],\n",
+    "                        \"Reporting Manager GCB\": rm.get(GCB_COL, \"\"),\n",
+    "                        **emp.to_dict()\n",
+    "                    })\n",
+    "\n",
+    "    # Exceptions: employees with missing managers (excluding MDs)\n",
+    "    all_emp_ids = set(enriched_df[EMP_ID_COL])\n",
+    "    all_mgr_ids = set(enriched_df[MGR_ID_COL])\n",
+    "    missing_mgr_ids = all_mgr_ids - all_emp_ids\n",
+    "\n",
+    "    for _, emp in enriched_df[enriched_df[MGR_ID_COL].isin(missing_mgr_ids)].iterrows():\n",
+    "        if emp[GCB_COL] != \"MD\":\n",
+    "            exceptions.append(emp.to_dict())\n",
+    "\n",
+    "    # Convert to DataFrames\n",
+    "    final_df = pd.DataFrame(final_rows)\n",
+    "    exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "    # Sorting\n",
+    "    final_df.sort_values(\n",
+    "        by=[\"MD Name\", \"GCB3 Name\", \"Reporting Manager Name\", EMP_NAME_COL],\n",
+    "        inplace=True,\n",
+    "        na_position=\"last\"\n",
+    "    )\n",
+    "\n",
+    "    # Save\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        final_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "    return final_df, exceptions_df\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# Run pipeline\n",
+    "# -------------------------\n",
     "if __name__ == \"__main__\":\n",
-    "    # Phase 1\n",
-    "    phase1_enrich(MONTHLY_FILE, GHA_FILE, \"phase1_enriched.xlsx\")\n",
-    "    \n",
-    "    # Phase 2\n",
-    "    phase2_flatten(\"phase1_enriched.xlsx\", \"final_hierarchy.xlsx\")\n"
+    "    monthly_file = \"monthly.csv\"\n",
+    "    gha_file = \"gha.xlsx\"\n",
+    "\n",
+    "    enriched = enrich_monthly_with_gha(monthly_file, gha_file)\n",
+    "    build_hierarchy(enriched)\n"
    ]
   },
   {
