--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9338b29",
+   "id": "b6cfd4c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_hierarchy(manager_id, hierarchy, enriched_df, path):\n",
+    "    reports = enriched_df[enriched_df[\"Entity Manager Employee ID\"] == manager_id]\n",
+    "\n",
+    "    for _, row in reports.iterrows():\n",
+    "        record = path.copy()\n",
+    "        record.update({\n",
+    "            \"Reporting Manager ID\": manager_id,\n",
+    "            \"Reporting Manager Name\": row[\"Entity Manager Employee Name\"],\n",
+    "            \"Reporting Manager GCB\": enriched_df.loc[\n",
+    "                enriched_df[\"Employee ID\"] == manager_id, \"Global Career Band\"\n",
+    "            ].values[0] if not enriched_df.loc[\n",
+    "                enriched_df[\"Employee ID\"] == manager_id, \"Global Career Band\"\n",
+    "            ].empty else None,\n",
+    "            \"Employee ID\": row[\"Employee ID\"],\n",
+    "            \"Employee Name\": row[\"Employee Name\"],\n",
+    "            \"Employee GCB\": row[\"Global Career Band\"],\n",
+    "        })\n",
+    "        hierarchy.append(record)\n",
+    "\n",
+    "        # Recurse if this employee has further reports\n",
+    "        build_hierarchy(row[\"Employee ID\"], hierarchy, enriched_df, record)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "097f60e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f330700",
+   "id": "d0915aaa",
    "metadata": {},
    "outputs": [],
    "source": [
