--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,37 +3,89 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6cfd4c3",
+   "id": "d5ff580e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_hierarchy(manager_id, hierarchy, enriched_df, path):\n",
-    "    reports = enriched_df[enriched_df[\"Entity Manager Employee ID\"] == manager_id]\n",
+    "import pandas as pd\n",
+    "\n",
+    "EMP_ID_COL = \"Employee ID\"\n",
+    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
+    "EMP_NAME_COL = \"Employee Name\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
+    "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
+    "\n",
+    "# ---------------------------------\n",
+    "# Recursive hierarchy builder\n",
+    "# ---------------------------------\n",
+    "def build_hierarchy_for_manager(manager_id, enriched_df, path, hierarchy):\n",
+    "    \"\"\"Recursively expand all reports of a given manager.\"\"\"\n",
+    "\n",
+    "    reports = enriched_df[enriched_df[MGR_ID_COL] == manager_id]\n",
     "\n",
     "    for _, row in reports.iterrows():\n",
+    "        # Prepare new path row\n",
     "        record = path.copy()\n",
     "        record.update({\n",
-    "            \"Reporting Manager ID\": manager_id,\n",
-    "            \"Reporting Manager Name\": row[\"Entity Manager Employee Name\"],\n",
-    "            \"Reporting Manager GCB\": enriched_df.loc[\n",
-    "                enriched_df[\"Employee ID\"] == manager_id, \"Global Career Band\"\n",
+    "            \"Manager ID\": manager_id,\n",
+    "            \"Manager Name\": row[MGR_NAME_COL],\n",
+    "            \"Manager GCB\": enriched_df.loc[\n",
+    "                enriched_df[EMP_ID_COL] == manager_id, GCB_COL\n",
     "            ].values[0] if not enriched_df.loc[\n",
-    "                enriched_df[\"Employee ID\"] == manager_id, \"Global Career Band\"\n",
+    "                enriched_df[EMP_ID_COL] == manager_id, GCB_COL\n",
     "            ].empty else None,\n",
-    "            \"Employee ID\": row[\"Employee ID\"],\n",
-    "            \"Employee Name\": row[\"Employee Name\"],\n",
-    "            \"Employee GCB\": row[\"Global Career Band\"],\n",
+    "            \"Employee ID\": row[EMP_ID_COL],\n",
+    "            \"Employee Name\": row[EMP_NAME_COL],\n",
+    "            \"Employee GCB\": row[GCB_COL],\n",
     "        })\n",
     "        hierarchy.append(record)\n",
     "\n",
-    "        # Recurse if this employee has further reports\n",
-    "        build_hierarchy(row[\"Employee ID\"], hierarchy, enriched_df, record)\n"
+    "        # Recurse further down\n",
+    "        build_hierarchy_for_manager(row[EMP_ID_COL], enriched_df, record, hierarchy)\n",
+    "\n",
+    "\n",
+    "def build_hierarchy(enriched_df, output_file=\"phase2_hierarchy.xlsx\"):\n",
+    "    \"\"\"Wrapper: starts recursion for each MD.\"\"\"\n",
+    "\n",
+    "    hierarchy = []\n",
+    "    exceptions = []\n",
+    "\n",
+    "    # Start only from MDs\n",
+    "    mds = enriched_df[enriched_df[GCB_COL] == \"MD\"]\n",
+    "\n",
+    "    for _, md in mds.iterrows():\n",
+    "        md_path = {\n",
+    "            \"MD ID\": md[EMP_ID_COL],\n",
+    "            \"MD Name\": md[EMP_NAME_COL]\n",
+    "        }\n",
+    "        # Add MD itself in hierarchy\n",
+    "        hierarchy.append({\n",
+    "            **md_path,\n",
+    "            \"Manager ID\": None,\n",
+    "            \"Manager Name\": None,\n",
+    "            \"Manager GCB\": None,\n",
+    "            \"Employee ID\": md[EMP_ID_COL],\n",
+    "            \"Employee Name\": md[EMP_NAME_COL],\n",
+    "            \"Employee GCB\": md[GCB_COL],\n",
+    "        })\n",
+    "        # Recursively add all reports\n",
+    "        build_hierarchy_for_manager(md[EMP_ID_COL], enriched_df, md_path, hierarchy)\n",
+    "\n",
+    "    # Convert to DataFrame\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
+    "\n",
+    "    # Save\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy\")\n",
+    "\n",
+    "    print(f\"✅ Hierarchy built → {output_file}\")\n",
+    "    return hierarchy_df\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "097f60e7",
+   "id": "c0fd644f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0915aaa",
+   "id": "2256bb97",
    "metadata": {},
    "outputs": [],
    "source": [
