--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,62 +3,50 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5ff580e",
+   "id": "1f6407db",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
     "EMP_ID_COL = \"Employee ID\"\n",
-    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
     "EMP_NAME_COL = \"Employee Name\"\n",
-    "GCB_COL = \"Global Career Band\"\n",
+    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
     "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
+    "GCB_COL = \"Global Career Band\"\n",
     "\n",
-    "# ---------------------------------\n",
-    "# Recursive hierarchy builder\n",
-    "# ---------------------------------\n",
-    "def build_hierarchy_for_manager(manager_id, enriched_df, path, hierarchy):\n",
-    "    \"\"\"Recursively expand all reports of a given manager.\"\"\"\n",
+    "def phase_two(input_file, output_file=\"hierarchy_report.xlsx\"):\n",
+    "    \"\"\"Build flattened hierarchy with unlimited levels + summary + exceptions.\"\"\"\n",
     "\n",
-    "    reports = enriched_df[enriched_df[MGR_ID_COL] == manager_id]\n",
+    "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
+    "    enriched.columns = enriched.columns.str.strip()\n",
     "\n",
-    "    for _, row in reports.iterrows():\n",
-    "        # Prepare new path row\n",
-    "        record = path.copy()\n",
-    "        record.update({\n",
-    "            \"Manager ID\": manager_id,\n",
-    "            \"Manager Name\": row[MGR_NAME_COL],\n",
-    "            \"Manager GCB\": enriched_df.loc[\n",
-    "                enriched_df[EMP_ID_COL] == manager_id, GCB_COL\n",
-    "            ].values[0] if not enriched_df.loc[\n",
-    "                enriched_df[EMP_ID_COL] == manager_id, GCB_COL\n",
-    "            ].empty else None,\n",
-    "            \"Employee ID\": row[EMP_ID_COL],\n",
-    "            \"Employee Name\": row[EMP_NAME_COL],\n",
-    "            \"Employee GCB\": row[GCB_COL],\n",
-    "        })\n",
-    "        hierarchy.append(record)\n",
-    "\n",
-    "        # Recurse further down\n",
-    "        build_hierarchy_for_manager(row[EMP_ID_COL], enriched_df, record, hierarchy)\n",
-    "\n",
-    "\n",
-    "def build_hierarchy(enriched_df, output_file=\"phase2_hierarchy.xlsx\"):\n",
-    "    \"\"\"Wrapper: starts recursion for each MD.\"\"\"\n",
+    "    df_lookup = enriched.set_index(EMP_ID_COL)\n",
     "\n",
     "    hierarchy = []\n",
     "    exceptions = []\n",
     "\n",
-    "    # Start only from MDs\n",
-    "    mds = enriched_df[enriched_df[GCB_COL] == \"MD\"]\n",
+    "    def recurse(manager_id, path):\n",
+    "        reports = enriched[enriched[MGR_ID_COL] == manager_id]\n",
+    "        for _, row in reports.iterrows():\n",
+    "            record = path.copy()\n",
+    "            record.update({\n",
+    "                \"Manager ID\": manager_id,\n",
+    "                \"Manager Name\": row[MGR_NAME_COL],\n",
+    "                \"Manager GCB\": df_lookup.loc[manager_id, GCB_COL]\n",
+    "                if manager_id in df_lookup.index else None,\n",
+    "                \"Employee ID\": row[EMP_ID_COL],\n",
+    "                \"Employee Name\": row[EMP_NAME_COL],\n",
+    "                \"Employee GCB\": row[GCB_COL],\n",
+    "            })\n",
+    "            hierarchy.append(record)\n",
+    "            recurse(row[EMP_ID_COL], record)\n",
     "\n",
+    "    # Start from MDs\n",
+    "    mds = enriched[enriched[GCB_COL] == \"MD\"]\n",
     "    for _, md in mds.iterrows():\n",
-    "        md_path = {\n",
-    "            \"MD ID\": md[EMP_ID_COL],\n",
-    "            \"MD Name\": md[EMP_NAME_COL]\n",
-    "        }\n",
-    "        # Add MD itself in hierarchy\n",
+    "        md_path = {\"MD ID\": md[EMP_ID_COL], \"MD Name\": md[EMP_NAME_COL]}\n",
+    "        # add MD itself\n",
     "        hierarchy.append({\n",
     "            **md_path,\n",
     "            \"Manager ID\": None,\n",
@@ -68,24 +56,68 @@
     "            \"Employee Name\": md[EMP_NAME_COL],\n",
     "            \"Employee GCB\": md[GCB_COL],\n",
     "        })\n",
-    "        # Recursively add all reports\n",
-    "        build_hierarchy_for_manager(md[EMP_ID_COL], enriched_df, md_path, hierarchy)\n",
+    "        recurse(md[EMP_ID_COL], md_path)\n",
     "\n",
-    "    # Convert to DataFrame\n",
+    "    # Exceptions: employees whose manager ID not in employee list\n",
+    "    all_emp_ids = set(enriched[EMP_ID_COL])\n",
+    "    missing_mgr_ids = set(enriched[MGR_ID_COL]) - all_emp_ids\n",
+    "    for _, row in enriched[enriched[MGR_ID_COL].isin(missing_mgr_ids)].iterrows():\n",
+    "        if row[GCB_COL] != \"MD\":\n",
+    "            exceptions.append(row.to_dict())\n",
+    "\n",
     "    hierarchy_df = pd.DataFrame(hierarchy)\n",
+    "    exceptions_df = pd.DataFrame(exceptions)\n",
     "\n",
-    "    # Save\n",
+    "    # -------- Summary sheet --------\n",
+    "    summary = {}\n",
+    "    summary[\"Total Employees\"] = len(enriched)\n",
+    "    summary[\"Total in Hierarchy\"] = hierarchy_df[\"Employee ID\"].nunique()\n",
+    "    summary[\"Missing Managers Count\"] = len(exceptions_df)\n",
+    "\n",
+    "    per_md = hierarchy_df.groupby(\"MD Name\")[\"Employee ID\"].nunique().reset_index()\n",
+    "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
+    "\n",
+    "    per_gcb3 = hierarchy_df[hierarchy_df[\"Employee GCB\"] == 3] \\\n",
+    "        .groupby(\"Employee Name\")[\"Employee ID\"].count().reset_index()\n",
+    "    per_gcb3.columns = [\"GCB3 Name\", \"Direct Reports\"]\n",
+    "\n",
+    "    per_gcb4 = hierarchy_df[hierarchy_df[\"Employee GCB\"] == 4] \\\n",
+    "        .groupby(\"Employee Name\")[\"Employee ID\"].count().reset_index()\n",
+    "    per_gcb4.columns = [\"GCB4 Name\", \"Direct Reports\"]\n",
+    "\n",
+    "    # Save all outputs\n",
     "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
-    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy\")\n",
+    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
     "\n",
-    "    print(f\"✅ Hierarchy built → {output_file}\")\n",
-    "    return hierarchy_df\n"
+    "        pd.DataFrame([summary]).to_excel(writer, index=False, sheet_name=\"Summary\")\n",
+    "        per_md.to_excel(writer, index=False, sheet_name=\"MD Headcount\")\n",
+    "        per_gcb3.to_excel(writer, index=False, sheet_name=\"GCB3 Reports\")\n",
+    "        per_gcb4.to_excel(writer, index=False, sheet_name=\"GCB4 Reports\")\n",
+    "\n",
+    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    gha_file = \"GHA.xlsx\"\n",
+    "    csv_file = \"Monthly.csv\"\n",
+    "    output_file_phase1 = \"phase1_enriched.xlsx\"\n",
+    "    final_output = \"hierarchy_report.xlsx\"\n",
+    "\n",
+    "    print(\"Running Phase 1...\")\n",
+    "    phase_one(gha_file, csv_file, output_file_phase1)\n",
+    "\n",
+    "    print(\"Running Phase 2...\")\n",
+    "    phase_two(output_file_phase1, final_output)\n",
+    "\n",
+    "    print(\"✅ Processing complete!\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0fd644f",
+   "id": "ea2a910c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2256bb97",
+   "id": "e5a1dac3",
    "metadata": {},
    "outputs": [],
    "source": [
