--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,19 +3,83 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f6407db",
+   "id": "bc37722e",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "# -------------------------\n",
+    "# Constants\n",
+    "# -------------------------\n",
     "EMP_ID_COL = \"Employee ID\"\n",
     "EMP_NAME_COL = \"Employee Name\"\n",
-    "MGR_ID_COL = \"Entity Manager Employee ID\"\n",
+    "EMP_EMAIL_COL = \"Employee Business Email Address\"\n",
+    "MGR_ID_COL = \"Entity Manager Employee ID\"   # must exist in monthly.csv\n",
     "MGR_NAME_COL = \"Entity Manager Employee Name\"\n",
     "GCB_COL = \"Global Career Band\"\n",
     "\n",
-    "def phase_two(input_file, output_file=\"hierarchy_report.xlsx\"):\n",
+    "\n",
+    "# -------------------------\n",
+    "# Phase 1: Enrichment\n",
+    "# -------------------------\n",
+    "def phase_one(gha_file, monthly_file, output_file=\"phase1_enriched.xlsx\"):\n",
+    "    \"\"\"Enrich monthly CSV with GHA details.\"\"\"\n",
+    "\n",
+    "    # Read monthly file (CSV may have special encoding)\n",
+    "    monthly = pd.read_csv(monthly_file, encoding=\"ISO-8859-1\")\n",
+    "    gha = pd.read_excel(gha_file, sheet_name=\"Headcount - Employee Detail\")\n",
+    "\n",
+    "    # Strip column names\n",
+    "    monthly.columns = monthly.columns.str.strip()\n",
+    "    gha.columns = gha.columns.str.strip()\n",
+    "\n",
+    "    # Select needed columns from GHA (add more here if needed)\n",
+    "    gha_subset = gha[\n",
+    "        [\n",
+    "            EMP_ID_COL,\n",
+    "            EMP_NAME_COL,\n",
+    "            EMP_EMAIL_COL,\n",
+    "            GCB_COL,\n",
+    "            \"Company\",\n",
+    "            \"Department\",\n",
+    "            \"Job Function\",\n",
+    "            \"Legal Entity Name\",\n",
+    "            \"Employee Status\"\n",
+    "        ]\n",
+    "    ].drop_duplicates()\n",
+    "\n",
+    "    # Merge monthly + gha\n",
+    "    merged = monthly.merge(\n",
+    "        gha_subset,\n",
+    "        on=EMP_ID_COL,\n",
+    "        how=\"left\",\n",
+    "        suffixes=(\"\", \"_GHA\")\n",
+    "    )\n",
+    "\n",
+    "    # Add Manager GCB by merging again on Manager ID\n",
+    "    mgr_gcb = gha_subset[[EMP_ID_COL, GCB_COL]].rename(\n",
+    "        columns={EMP_ID_COL: MGR_ID_COL, GCB_COL: \"Manager GCB\"}\n",
+    "    )\n",
+    "    merged = merged.merge(mgr_gcb, on=MGR_ID_COL, how=\"left\")\n",
+    "\n",
+    "    # Capture missing GHA matches\n",
+    "    missing = merged[merged[GCB_COL].isna()]\n",
+    "\n",
+    "    # Save Phase 1\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        merged.to_excel(writer, index=False, sheet_name=\"Enriched\")\n",
+    "        if not missing.empty:\n",
+    "            missing.to_excel(writer, index=False, sheet_name=\"Missing in GHA\")\n",
+    "\n",
+    "    print(f\"✅ Phase 1 completed → {output_file}\")\n",
+    "    return merged\n",
+    "\n",
+    "\n",
+    "# -------------------------\n",
+    "# Phase 2: Build Hierarchy\n",
+    "# -------------------------\n",
+    "def phase_two(input_file=\"phase1_enriched.xlsx\", output_file=\"hierarchy_report.xlsx\"):\n",
     "    \"\"\"Build flattened hierarchy with unlimited levels + summary + exceptions.\"\"\"\n",
     "\n",
     "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
@@ -27,6 +91,7 @@
     "    exceptions = []\n",
     "\n",
     "    def recurse(manager_id, path):\n",
+    "        \"\"\"Recursively walk down the hierarchy from a manager.\"\"\"\n",
     "        reports = enriched[enriched[MGR_ID_COL] == manager_id]\n",
     "        for _, row in reports.iterrows():\n",
     "            record = path.copy()\n",
@@ -35,27 +100,31 @@
     "                \"Manager Name\": row[MGR_NAME_COL],\n",
     "                \"Manager GCB\": df_lookup.loc[manager_id, GCB_COL]\n",
     "                if manager_id in df_lookup.index else None,\n",
-    "                \"Employee ID\": row[EMP_ID_COL],\n",
-    "                \"Employee Name\": row[EMP_NAME_COL],\n",
-    "                \"Employee GCB\": row[GCB_COL],\n",
     "            })\n",
+    "            # keep ALL columns from enriched\n",
+    "            record.update(row.to_dict())\n",
     "            hierarchy.append(record)\n",
+    "\n",
+    "            # recurse further down\n",
     "            recurse(row[EMP_ID_COL], record)\n",
     "\n",
-    "    # Start from MDs\n",
+    "    # Find all MDs\n",
     "    mds = enriched[enriched[GCB_COL] == \"MD\"]\n",
     "    for _, md in mds.iterrows():\n",
     "        md_path = {\"MD ID\": md[EMP_ID_COL], \"MD Name\": md[EMP_NAME_COL]}\n",
+    "\n",
     "        # add MD itself\n",
-    "        hierarchy.append({\n",
-    "            **md_path,\n",
+    "        row_dict = md.to_dict()\n",
+    "        row_dict.update({\n",
+    "            \"MD ID\": md[EMP_ID_COL],\n",
+    "            \"MD Name\": md[EMP_NAME_COL],\n",
     "            \"Manager ID\": None,\n",
     "            \"Manager Name\": None,\n",
     "            \"Manager GCB\": None,\n",
-    "            \"Employee ID\": md[EMP_ID_COL],\n",
-    "            \"Employee Name\": md[EMP_NAME_COL],\n",
-    "            \"Employee GCB\": md[GCB_COL],\n",
     "        })\n",
+    "        hierarchy.append(row_dict)\n",
+    "\n",
+    "        # recurse into MD’s reports\n",
     "        recurse(md[EMP_ID_COL], md_path)\n",
     "\n",
     "    # Exceptions: employees whose manager ID not in employee list\n",
@@ -71,18 +140,18 @@
     "    # -------- Summary sheet --------\n",
     "    summary = {}\n",
     "    summary[\"Total Employees\"] = len(enriched)\n",
-    "    summary[\"Total in Hierarchy\"] = hierarchy_df[\"Employee ID\"].nunique()\n",
+    "    summary[\"Total in Hierarchy\"] = hierarchy_df[EMP_ID_COL].nunique()\n",
     "    summary[\"Missing Managers Count\"] = len(exceptions_df)\n",
     "\n",
-    "    per_md = hierarchy_df.groupby(\"MD Name\")[\"Employee ID\"].nunique().reset_index()\n",
+    "    per_md = hierarchy_df.groupby(\"MD Name\")[EMP_ID_COL].nunique().reset_index()\n",
     "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
     "\n",
-    "    per_gcb3 = hierarchy_df[hierarchy_df[\"Employee GCB\"] == 3] \\\n",
-    "        .groupby(\"Employee Name\")[\"Employee ID\"].count().reset_index()\n",
+    "    per_gcb3 = hierarchy_df[hierarchy_df[GCB_COL] == 3] \\\n",
+    "        .groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
     "    per_gcb3.columns = [\"GCB3 Name\", \"Direct Reports\"]\n",
     "\n",
-    "    per_gcb4 = hierarchy_df[hierarchy_df[\"Employee GCB\"] == 4] \\\n",
-    "        .groupby(\"Employee Name\")[\"Employee ID\"].count().reset_index()\n",
+    "    per_gcb4 = hierarchy_df[hierarchy_df[GCB_COL] == 4] \\\n",
+    "        .groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
     "    per_gcb4.columns = [\"GCB4 Name\", \"Direct Reports\"]\n",
     "\n",
     "    # Save all outputs\n",
@@ -97,11 +166,15 @@
     "        per_gcb4.to_excel(writer, index=False, sheet_name=\"GCB4 Reports\")\n",
     "\n",
     "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "    return hierarchy_df, exceptions_df\n",
     "\n",
-    "    \n",
+    "\n",
+    "# -------------------------\n",
+    "# Run pipeline\n",
+    "# -------------------------\n",
     "if __name__ == \"__main__\":\n",
-    "    gha_file = \"GHA.xlsx\"\n",
-    "    csv_file = \"Monthly.csv\"\n",
+    "    gha_file = \"GHA.xlsx\"          # input GHA file\n",
+    "    csv_file = \"Monthly.csv\"       # input monthly file\n",
     "    output_file_phase1 = \"phase1_enriched.xlsx\"\n",
     "    final_output = \"hierarchy_report.xlsx\"\n",
     "\n",
@@ -117,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea2a910c",
+   "id": "771ba392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5a1dac3",
+   "id": "8387a017",
    "metadata": {},
    "outputs": [],
    "source": [
