--- a/HDB.ipynb
+++ b/HDB.ipynb
@@ -3,7 +3,209 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc37722e",
+   "id": "f1b5122c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# -------------------------\n",
+    "# Phase 2: Build Hierarchy\n",
+    "# -------------------------\n",
+    "def phase_two(input_file=\"phase1_enriched.xlsx\", output_file=\"hierarchy_report.xlsx\"):\n",
+    "    \"\"\"Build flattened hierarchy with unlimited levels + summary + exceptions.\"\"\"\n",
+    "\n",
+    "    enriched = pd.read_excel(input_file, sheet_name=\"Enriched\")\n",
+    "    enriched.columns = enriched.columns.str.strip()\n",
+    "\n",
+    "    df_lookup = enriched.set_index(EMP_ID_COL)\n",
+    "\n",
+    "    hierarchy = []\n",
+    "    exceptions = []\n",
+    "\n",
+    "    def recurse(manager_id, path):\n",
+    "        \"\"\"Recursively walk down the hierarchy from a manager.\"\"\"\n",
+    "        reports = enriched[enriched[MGR_ID_COL] == manager_id]\n",
+    "        for _, row in reports.iterrows():\n",
+    "            record = path.copy()\n",
+    "            record.update({\n",
+    "                \"Manager ID\": manager_id,\n",
+    "                \"Manager Name\": row[MGR_NAME_COL],\n",
+    "                \"Manager GCB\": df_lookup.loc[manager_id, GCB_COL]\n",
+    "                if manager_id in df_lookup.index else None,\n",
+    "            })\n",
+    "            # keep ALL columns from enriched\n",
+    "            record.update(row.to_dict())\n",
+    "            hierarchy.append(record)\n",
+    "\n",
+    "            # recurse further down\n",
+    "            recurse(row[EMP_ID_COL], record)\n",
+    "\n",
+    "    # Find all MDs\n",
+    "    mds = enriched[enriched[GCB_COL] == \"MD\"]\n",
+    "    for _, md in mds.iterrows():\n",
+    "        md_path = {\"MD ID\": md[EMP_ID_COL], \"MD Name\": md[EMP_NAME_COL]}\n",
+    "\n",
+    "        # add MD itself\n",
+    "        row_dict = md.to_dict()\n",
+    "        row_dict.update({\n",
+    "            \"MD ID\": md[EMP_ID_COL],\n",
+    "            \"MD Name\": md[EMP_NAME_COL],\n",
+    "            \"Manager ID\": None,\n",
+    "            \"Manager Name\": None,\n",
+    "            \"Manager GCB\": None,\n",
+    "        })\n",
+    "        hierarchy.append(row_dict)\n",
+    "\n",
+    "        # recurse into MD’s reports\n",
+    "        recurse(md[EMP_ID_COL], md_path)\n",
+    "\n",
+    "    # Exceptions: employees whose manager ID not in employee list\n",
+    "    all_emp_ids = set(enriched[EMP_ID_COL])\n",
+    "    missing_mgr_ids = set(enriched[MGR_ID_COL]) - all_emp_ids\n",
+    "    for _, row in enriched[enriched[MGR_ID_COL].isin(missing_mgr_ids)].iterrows():\n",
+    "        if row[GCB_COL] != \"MD\":\n",
+    "            exceptions.append(row.to_dict())\n",
+    "\n",
+    "    hierarchy_df = pd.DataFrame(hierarchy)\n",
+    "    exceptions_df = pd.DataFrame(exceptions)\n",
+    "\n",
+    "    # -------- Single consolidated Summary sheet --------\n",
+    "    summary_tables = []\n",
+    "\n",
+    "    # overall counts\n",
+    "    summary = pd.DataFrame([{\n",
+    "        \"Metric\": \"Total Employees\", \"Value\": len(enriched)\n",
+    "    }, {\n",
+    "        \"Metric\": \"Total in Hierarchy\", \"Value\": hierarchy_df[EMP_ID_COL].nunique()\n",
+    "    }, {\n",
+    "        \"Metric\": \"Missing Managers Count\", \"Value\": len(exceptions_df)\n",
+    "    }])\n",
+    "    summary_tables.append((\"Overall Summary\", summary))\n",
+    "\n",
+    "    # per-MD\n",
+    "    per_md = hierarchy_df.groupby(\"MD Name\")[EMP_ID_COL].nunique().reset_index()\n",
+    "    per_md.columns = [\"MD Name\", \"Headcount\"]\n",
+    "    summary_tables.append((\"Headcount per MD\", per_md))\n",
+    "\n",
+    "    # per-GCB3\n",
+    "    per_gcb3 = hierarchy_df[hierarchy_df[GCB_COL] == 3] \\\n",
+    "        .groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
+    "    per_gcb3.columns = [\"GCB3 Name\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB3\", per_gcb3))\n",
+    "\n",
+    "    # per-GCB4\n",
+    "    per_gcb4 = hierarchy_df[hierarchy_df[GCB_COL] == 4] \\\n",
+    "        .groupby(EMP_NAME_COL)[EMP_ID_COL].count().reset_index()\n",
+    "    per_gcb4.columns = [\"GCB4 Name\", \"Direct Reports\"]\n",
+    "    summary_tables.append((\"Direct Reports per GCB4\", per_gcb4))\n",
+    "\n",
+    "    # Save all outputs\n",
+    "    with pd.ExcelWriter(output_file, engine=\"openpyxl\") as writer:\n",
+    "        hierarchy_df.to_excel(writer, index=False, sheet_name=\"Hierarchy Report\")\n",
+    "        if not exceptions_df.empty:\n",
+    "            exceptions_df.to_excel(writer, index=False, sheet_name=\"Missing Managers\")\n",
+    "\n",
+    "        # Write all summaries stacked in one sheet\n",
+    "        start_row = 0\n",
+    "        for title, df in summary_tables:\n",
+    "            # write a header row\n",
+    "            pd.DataFrame([[title]]).to_excel(writer, index=False, header=False,\n",
+    "                                             sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += 1\n",
+    "            df.to_excel(writer, index=False, sheet_name=\"Summary\", startrow=start_row)\n",
+    "            start_row += len(df) + 2  # leave a gap\n",
+    "\n",
+    "    print(f\"✅ Phase 2 completed → {output_file}\")\n",
+    "    return hierarchy_df, exceptions_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d7f288a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Saved\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pptx import Presentation\n",
+    "from pptx.util import Inches, Pt\n",
+    "from pptx.dml.color import RGBColor\n",
+    "from pptx.enum.shapes import MSO_SHAPE\n",
+    "\n",
+    "# Create presentation\n",
+    "prs = Presentation()\n",
+    "slide_layout = prs.slide_layouts[6]  # blank slide\n",
+    "slide = prs.slides.add_slide(slide_layout)\n",
+    "\n",
+    "# Title\n",
+    "left, top, width, height = Inches(0.5), Inches(0.2), Inches(9), Inches(1)\n",
+    "textbox = slide.shapes.add_textbox(left, top, width, height)\n",
+    "tf = textbox.text_frame\n",
+    "tf.text = \"Cost Template Automation – Saving 144 Hours Annually\"\n",
+    "p = tf.paragraphs[0]\n",
+    "p.font.size = Pt(28)\n",
+    "p.font.bold = True\n",
+    "p.font.color.rgb = RGBColor(0, 51, 102)\n",
+    "\n",
+    "# Process flow boxes\n",
+    "process_steps = [\n",
+    "    (\"Step 1: Data Preparation\\nTool: CostTemplate_Data_Prep_Tool_KS\", 0.5),\n",
+    "    (\"Step 2: Report Generation\\nTool: Cost_Templates_Gen_Tool_KS\", 3.5),\n",
+    "    (\"Step 3: Finalization\\nTool: PasteAsValuesUtility\", 6.5)\n",
+    "]\n",
+    "\n",
+    "for text, left_in in process_steps:\n",
+    "    shape = slide.shapes.add_shape(\n",
+    "        MSO_SHAPE.ROUNDED_RECTANGLE,\n",
+    "        Inches(left_in), Inches(2), Inches(2.8), Inches(1.5)\n",
+    "    )\n",
+    "    shape.fill.solid()\n",
+    "    shape.fill.fore_color.rgb = RGBColor(91, 155, 213)\n",
+    "    shape.text = text\n",
+    "    for p in shape.text_frame.paragraphs:\n",
+    "        p.font.size = Pt(14)\n",
+    "        p.font.color.rgb = RGBColor(255, 255, 255)\n",
+    "        p.alignment = 1  # center\n",
+    "\n",
+    "# Add arrows between steps\n",
+    "for i in range(2):\n",
+    "    slide.shapes.add_connector(\n",
+    "        1, Inches(3.3 + i*3), Inches(2.75), Inches(3.5 + i*3), Inches(2.75)\n",
+    "    )\n",
+    "\n",
+    "# Benefits box\n",
+    "shape = slide.shapes.add_shape(\n",
+    "    MSO_SHAPE.RECTANGLE,\n",
+    "    Inches(0.5), Inches(4), Inches(8.5), Inches(2)\n",
+    ")\n",
+    "shape.fill.solid()\n",
+    "shape.fill.fore_color.rgb = RGBColor(237, 125, 49)\n",
+    "shape.text = (\n",
+    "    \"Benefits:\\n\"\n",
+    "    \"• Saves 12 hours per month (~144 hours annually)\\n\"\n",
+    "    \"• Eliminates manual TM1 refreshes & errors\\n\"\n",
+    "    \"• Ensures consistent, validated dashboards\\n\"\n",
+    "    \"• Ready-to-share lightweight reports\"\n",
+    ")\n",
+    "for p in shape.text_frame.paragraphs:\n",
+    "    p.font.size = Pt(16)\n",
+    "    p.font.color.rgb = RGBColor(255, 255, 255)\n",
+    "\n",
+    "# Save file\n",
+    "prs.save(\"Cost_Automation_OnePager.pptx\")\n",
+    "print(\"File Saved\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2993a889",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "771ba392",
+   "id": "07a1dece",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +603,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8387a017",
+   "id": "f4a4fbde",
    "metadata": {},
    "outputs": [],
    "source": [
